# kickstart

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/demo/: new-project-preview.txt
docs/examples/existing-repo/: KICKOFF.md  PROJECT.md  TASKS.md
docs/examples/new-project/: KICKOFF.md  PROJECT.md  TASKS.md
docs/examples/repo-cleanup/: KICKOFF.md  PROJECT.md  TASKS.md
src/kickstart/: __init__.py  brief.py  cli.py  ui.py
tests/: test_brief.py  test_cli.py  test_ui.py
