[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "kickstart"
version = "0.1.0"
description = "Forge rough project ideas into structured kickoff briefs."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "betnbd" }]

[project.scripts]
kickstart = "kickstart.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
